Fixed navbar collapse element, working on FAQ style

--- a/src/styles/client.module.sass
+++ b/src/styles/client.module.sass
@@ -5,6 +5,14 @@
     min-height: 100%
     min-width: 100%
 
+.index-mission-container
+  display: flex
+  justify-content: center
+  margin-bottom: 50px
+
+.index-mission
+  width: 60vw
+  font-size: 1.2em
 
 .index-point-wrapper
   display: flex
@@ -19,7 +27,6 @@
   text-align: center
 
 .index-point-casing
-  display: flex
   align-items: center
   > a:hover
     color: black
@@ -32,11 +39,11 @@
 .index-splash-container
   width: 100vw
   height: 70vh
+  min-height: 476px
   text-align: center
   color: #A51C30
   font-family: 'EB-Garamond',serif
   font-size: 112px
-
   background-image: url('../images/campus_two_crop.jpg')
   background-size: cover
   background-position: top
@@ -69,9 +76,6 @@
   .splash-front
     width: 85%
     height: auto
-
-  .index-point-wrapper
-    flex-direction: column
 
   .index-point-vertical
     display: none
